<resources>
    <string name="app_name">Calculator Remix</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty"> </string>
    <string name="fahrenheit">Fahrenheit:</string>
    <string name="Celsius">Celsius:</string>
    <string name="convert">Convert</string>
    <string name="calculate">Calculate</string>
    <string name="total_bill">Total Bill:</string>
    <string name="number_of_people">Number of People:</string>
    <string name="tip_percentage">Tip Percentage:</string>
    <string name="bill_per_person">Bill Per Person:</string>
    <string name="miles">Miles:</string>
    <string name="kilometers">Kilometers:</string>
</resources>